Tests/StellaTests/Resources/printed-code/bad/ERROR_UNEXPECTED_NUMBER_OF_PARAMETERS_IN_LAMBDA/simple_unexpected_number.st
language core;

extend with #multiparameter-functions;

fn main(n : Nat) -> fn(Nat) -> Nat {
    return fn(a : Nat, b : Nat) {
        return 0
    }
}